@@ -1,2 +1,3 @@
 [B]Version 1.1.60[/B]
 Porno365 - Domain fix
+xfreehd - added LOGIN and GOTOPAGE
